@@ -1,4 +1,5 @@
 0.96	ADDED - RRD datasource can take SET rrd_default_path to make configs a little easier to read.
+        CHANGE - A NODE with no POSITION is not drawn, instead of drawn at 0,0. Useful for templates.
 	
 
 0.95b	FIXED - SQL schema issue that upset some mysql versions
